--- a/ElsoOldalam.html
+++ b/ElsoOldalam.html
@@ -5,12 +5,18 @@
 <title>Teszt</title>
 <!-- Böngésző teteje-->
 </head>
-<body>
 <!-- Az oldal törzse--> 
+<body>
+<!-- Címsor 1--> 
 <h1>Bemutatkozás</h1>
 <!--Megjelenő szöveg-->
 <p>Teszt projekt</p>
 <h1>Magamról</h1>
-
+<h2>Hobbiaim</h2>
+<!-- Lista rendezetlen-->
+<ul>
+<li>Lustálkodás</li>
+<li>Túrázás</li>
+</ul>
 </body>
 </html>
