--- a/ElsoOldalam.html
+++ b/ElsoOldalam.html
@@ -18,5 +18,11 @@
 <li>Lustálkodás</li>
 <li>Túrázás</li>
 </ul>
+<h2>Gyerekek</h2>
+<!-- Lista rendezett-->
+<ol>
+<li>Egyeske</li>
+<li>Ketteske</li>
+</ol>
 </body>
 </html>
