--- a/ElsoOldalam.html
+++ b/ElsoOldalam.html
@@ -12,6 +12,11 @@
 <!--Megjelenő szöveg-->
 <p>Teszt projekt</p>
 <h1>Magamról</h1>
-
+<h2>Hobbiaim</h2>
+<!-- Lista rendezetlen-->
+<ul>
+<li>Lustálkodás</li>
+<li>Túrázás</li>
+</ul>
 </body>
 </html>
